Fixed Stockmarket and warehouse

--- a/game/html/mine.html
+++ b/game/html/mine.html
@@ -11,41 +11,7 @@
         <div id="info-div">
             <div id="map-select">
                 <div id="map-button">
-                    <a href="map.html" draggable="false"><span>&lt;</span></a>
-                </div>
-            </div>
-            <div id="left-info-div">
-                <div class="ore-info-div" id="coal-info-div">
-                    <img class="ore-info-img" id="coal-info-img" src="../img/template.png" draggable="false">
-                    <p class="ore-info-p" id="coal-info">0</p>
-                </div>
-                <div class="ore-info-div" id="iron-info-div">
-                    <img class="ore-info-img" id="iron-info-img" src="../img/template.png" draggable="false">
-                    <p class="ore-info-p" id="iron-info">0</p>
-                </div>
-                <div class="ore-info-div" id="copper-info-div">
-                    <img class="ore-info-img" id="copper-info-img" src="../img/template.png" draggable="false">
-                    <p class="ore-info-p" id="copper-info">0</p>
-                </div>
-                <div class="ore-info-div" id="silver-info-div">
-                    <img class="ore-info-img" id="silver-info-img" src="../img/template.png" draggable="false">
-                    <p class="ore-info-p" id="silver-info">0</p>
-                </div>
-                <div class="ore-info-div" id="gold-info-div">
-                    <img class="ore-info-img" id="gold-info-img" src="../img/template.png" draggable="false">
-                    <p class="ore-info-p" id="gold-info">0</p>
-                </div>
-                <div class="ore-info-div" id="diamond-info-div">
-                    <img class="ore-info-img" id="diamond-info-img" src="../img/template.png" draggable="false">
-                    <p class="ore-info-p" id="diamond-info">0</p>
-                </div>
-                <div class="ore-info-div" id="diamond-info-div">
-                    <img class="ore-info-img" id="diamond-info-img" src="../img/template.png" draggable="false">
-                    <p class="ore-info-p" id="diamond-info">0</p>
-                </div>
-                <div class="ore-info-div" id="diamond-info-div">
-                    <img class="ore-info-img" id="diamond-info-img" src="../img/template.png" draggable="false">
-                    <p class="ore-info-p" id="diamond-info">0</p>
+                    <a href="map_mine.html" draggable="false"><span>&lt;</span></a>
                 </div>
             </div>
             
@@ -54,4 +20,8 @@
         </div>
     </div>
 </body>
+<script type="module" src="../js/mine.js"></script>
+<script type="module" src="../js/storage.js"></script>
+<script type="module" src="../data/oredata.js"></script>
+<script type="module" src="../data/playerdata.js"></script>
 </html>
