--- a/game/html/stockmarket.html
+++ b/game/html/stockmarket.html
@@ -9,8 +9,15 @@
   </head>
   <body>
     <div class="info">
-        <div id="info-div">            
+        <div id="info-div">
+            <div id="map-select">
+                <div id="map-button">
+                    <a href="map_mine.html" draggable="false"><span>&lt;</span></a>
+                </div>
+            </div>
+            
             <h1 id="money">◈ 0</h1>
+
         </div>
     </div>
     <table>
@@ -36,18 +43,18 @@
                 <td id="ffr-change" onclick="dropdown('ffr')"></td>
                 <td id="ffr-shares" onclick="dropdown('ffr')">0</td>
                 <td id="ffr-holdings" onclick="dropdown('ffr')"></td>
-                <td><button class="stock-button" onclick="buyStock(0, 0)">Buy All</button></td>
-                <td><button class="stock-button" onclick="sellStock(0, 0)">Sell All</button></td>
+                <td><button class="stock-button" id="ffr-stock-button-all-buy">Buy All</button></td>
+                <td><button class="stock-button" id="ffr-stock-button-all-sell">Sell All</button></td>
             </tr>
             <tr class="stock-details" id="ffr-stock-details">
                 <td colspan="9" id="ffr-graf">
                     <div class="chart" id="ffr-chart" onclick="dropdown('ffr')"></div>
                     <div class="buysell">
-                        <span class="input-number-decrement" id="input-number-decrement-id" onclick="decreaseValue(0)">-</span>
+                        <span class="input-number-decrement" id="ffr-input-number-decrement-id">-</span>
                         <input class="input-number" id="ffr-input-number-id" type="text" value="1" min="0" max="10">
-                        <span class="input-number-increment" id="input-number-increment-id" onclick="increaseValue(0)">+</span>
-                        <button class="stock-button-drop" onclick="buyStock(0, 1)">Buy</button>
-                        <button class="stock-button-drop" onclick="sellStock(0, 1)">Sell</button>
+                        <span class="input-number-increment" id="ffr-input-number-increment-id">+</span>
+                        <button class="stock-button-drop" id="ffr-stock-button-buy">Buy</button>
+                        <button class="stock-button-drop" id="ffr-stock-button-sell">Sell</button>
                     </div>
                 </td>
             </tr>
@@ -59,18 +66,18 @@
                 <td id="clt-change" onclick="dropdown('clt')"></td>
                 <td id="clt-shares" onclick="dropdown('clt')">0</td>
                 <td id="clt-holdings" onclick="dropdown('clt')"></td>
-                <td><button class="stock-button" onclick="buyStock(1, 0)">Buy All</button></td>
-                <td><button class="stock-button" onclick="sellStock(1, 0)">Sell All</button></td>
+                <td><button class="stock-button" id="clt-stock-button-all-buy">Buy All</button></td>
+                <td><button class="stock-button" id="clt-stock-button-all-sell">Sell All</button></td>
             </tr>
             <tr class="stock-details" id="clt-stock-details">
                 <td colspan="9" id="clt-graf">
                     <div class="chart" id="clt-chart" onclick="dropdown('clt')"></div>
                     <div class="buysell">
-                        <span class="input-number-decrement" id="input-number-decrement-id" onclick="decreaseValue(1)">-</span>
+                        <span class="input-number-decrement" id="clt-input-number-decrement-id">-</span>
                         <input class="input-number" id="clt-input-number-id" type="text" value="1" min="0" max="10">
-                        <span class="input-number-increment" id="input-number-increment-id" onclick="increaseValue(1)">+</span>
-                        <button class="stock-button-drop" onclick="buyStock(1, 1)">Buy</button>
-                        <button class="stock-button-drop" onclick="sellStock(1, 1)">Sell</button>
+                        <span class="input-number-increment" id="clt-input-number-increment-id">+</span>
+                        <button class="stock-button-drop" id="clt-stock-button-buy">Buy</button>
+                        <button class="stock-button-drop" id="clt-stock-button-sell">Sell</button>
                     </div>
                 </td>
             </tr>
@@ -82,18 +89,18 @@
                 <td id="ii-change" onclick="dropdown('ii')"></td>
                 <td id="ii-shares" onclick="dropdown('ii')">0</td>
                 <td id="ii-holdings" onclick="dropdown('ii')"></td>
-                <td><button class="stock-button" onclick="buyStock(2, 0)">Buy All</button></td>
-                <td><button class="stock-button" onclick="sellStock(2, 0)">Sell All</button></td>
+                <td><button class="stock-button" id="ii-stock-button-all-buy">Buy All</button></td>
+                <td><button class="stock-button" id="ii-stock-button-all-sell">Sell All</button></td>
             </tr>
             <tr class="stock-details" id="ii-stock-details">
                 <td colspan="9" id="ii-graf">
                     <div class="chart" id="ii-chart" onclick="dropdown('ii')"></div>
                     <div class="buysell">
-                        <span class="input-number-decrement" id="input-number-decrement-id" onclick="decreaseValue(2)">-</span>
+                        <span class="input-number-decrement" id="ii-input-number-decrement-id">-</span>
                         <input class="input-number" id="ii-input-number-id" type="text" value="1" min="0" max="10">
-                        <span class="input-number-increment" id="input-number-increment-id" onclick="increaseValue(2)">+</span>
-                        <button class="stock-button-drop" onclick="buyStock(2, 1)">Buy</button>
-                        <button class="stock-button-drop" onclick="sellStock(2, 1)">Sell</button>
+                        <span class="input-number-increment" id="ii-input-number-increment-id">+</span>
+                        <button class="stock-button-drop" id="ii-stock-button-buy">Buy</button>
+                        <button class="stock-button-drop" id="ii-stock-button-sell">Sell</button>
                     </div>
                 </td>
             </tr>
@@ -105,18 +112,18 @@
                 <td id="shm-change" onclick="dropdown('shm')"></td>
                 <td id="shm-shares" onclick="dropdown('shm')">0</td>
                 <td id="shm-holdings" onclick="dropdown('shm')"></td>
-                <td><button class="stock-button" onclick="buyStock(3, 0)">Buy All</button></td>
-                <td><button class="stock-button" onclick="sellStock(3, 0)">Sell All</button></td>
+                <td><button class="stock-button" id="shm-stock-button-all-buy">Buy All</button></td>
+                <td><button class="stock-button" id="shm-stock-button-all-sell">Sell All</button></td>
             </tr>
             <tr class="stock-details" id="shm-stock-details">
                 <td colspan="9" id="shm-graf">
                     <div class="chart" id="shm-chart" onclick="dropdown('shm')"></div>
                     <div class="buysell">
-                        <span class="input-number-decrement" id="input-number-decrement-id" onclick="decreaseValue(3)">-</span>
+                        <span class="input-number-decrement" id="shm-input-number-decrement-id">-</span>
                         <input class="input-number" id="shm-input-number-id" type="text" value="1" min="0" max="10">
-                        <span class="input-number-increment" id="input-number-increment-id" onclick="increaseValue(3)">+</span>
-                        <button class="stock-button-drop" onclick="buyStock(3, 1)">Buy</button>
-                        <button class="stock-button-drop" onclick="sellStock(3, 1)">Sell</button>
+                        <span class="input-number-increment" id="shm-input-number-increment-id">+</span>
+                        <button class="stock-button-drop" id="shm-stock-button-buy">Buy</button>
+                        <button class="stock-button-drop" id="shm-stock-button-sell">Sell</button>
                     </div>
                 </td>
             </tr>
@@ -128,18 +135,18 @@
                 <td id="aai-change" onclick="dropdown('aai')"></td>
                 <td id="aai-shares" onclick="dropdown('aai')">0</td>
                 <td id="aai-holdings" onclick="dropdown('aai')"></td>
-                <td><button class="stock-button" onclick="buyStock(4, 0)">Buy All</button></td>
-                <td><button class="stock-button" onclick="sellStock(4, 0)">Sell All</button></td>
+                <td><button class="stock-button" id="aai-stock-button-all-buy">Buy All</button></td>
+                <td><button class="stock-button" id="aai-stock-button-all-sell">Sell All</button></td>
             </tr>
             <tr class="stock-details" id="aai-stock-details">
                 <td colspan="9" id="aai-graf">
                     <div class="chart" id="aai-chart" onclick="dropdown('aai')"></div>
                     <div class="buysell">
-                        <span class="input-number-decrement" id="input-number-decrement-id" onclick="decreaseValue(4)">-</span>
+                        <span class="input-number-decrement" id="aai-input-number-decrement-id">-</span>
                         <input class="input-number" id="aai-input-number-id" type="text" value="1" min="0" max="10">
-                        <span class="input-number-increment" id="input-number-increment-id" onclick="increaseValue(4)">+</span>
-                        <button class="stock-button-drop" onclick="buyStock(4, 1)">Buy</button>
-                        <button class="stock-button-drop" onclick="sellStock(4, 1)">Sell</button>
+                        <span class="input-number-increment" id="aai-input-number-increment-id">+</span>
+                        <button class="stock-button-drop" id="aai-stock-button-buy">Buy</button>
+                        <button class="stock-button-drop" id="aai-stock-button-sell">Sell</button>
                     </div>
                 </td>
             </tr>
@@ -151,18 +158,18 @@
                 <td id="cce-change" onclick="dropdown('cce')"></td>
                 <td id="cce-shares" onclick="dropdown('cce')">0</td>
                 <td id="cce-holdings" onclick="dropdown('cce')"></td>
-                <td><button class="stock-button" onclick="buyStock(5, 0)">Buy All</button></td>
-                <td><button class="stock-button" onclick="sellStock(5, 0)">Sell All</button></td>
+                <td><button class="stock-button" id="cce-stock-button-all-buy">Buy All</button></td>
+                <td><button class="stock-button" id="cce-stock-button-all-sell">Sell All</button></td>
             </tr>
             <tr class="stock-details" id="cce-stock-details">
                 <td colspan="9" id="cce-graf">
                     <div class="chart" id="cce-chart" onclick="dropdown('cce')"></div>
                     <div class="buysell">
-                        <span class="input-number-decrement" id="input-number-decrement-id" onclick="decreaseValue(5)">-</span>
+                        <span class="input-number-decrement" id="cce-input-number-decrement-id">-</span>
                         <input class="input-number" id="cce-input-number-id" type="text" value="1" min="0" max="10">
-                        <span class="input-number-increment" id="input-number-increment-id" onclick="increaseValue(5)">+</span>
-                        <button class="stock-button-drop" onclick="buyStock(5, 1)">Buy</button>
-                        <button class="stock-button-drop" onclick="sellStock(5, 1)">Sell</button>
+                        <span class="input-number-increment" id="cce-input-number-increment-id">+</span>
+                        <button class="stock-button-drop" id="cce-stock-button-buy">Buy</button>
+                        <button class="stock-button-drop" id="cce-stock-button-sell">Sell</button>
                     </div>
                 </td>
             </tr>
@@ -174,18 +181,18 @@
                 <td id="ddc-change" onclick="dropdown('ddc')"></td>
                 <td id="ddc-shares" onclick="dropdown('ddc')">0</td>
                 <td id="ddc-holdings" onclick="dropdown('ddc')"></td>
-                <td><button class="stock-button" onclick="buyStock(6, 0)">Buy All</button></td>
-                <td><button class="stock-button" onclick="sellStock(6, 0)">Sell All</button></td>
+                <td><button class="stock-button" id="ddc-stock-button-all-buy">Buy All</button></td>
+                <td><button class="stock-button" id="ddc-stock-button-all-sell">Sell All</button></td>
             </tr>
             <tr class="stock-details" id="ddc-stock-details">
                 <td colspan="9" id="ddc-graf">
                     <div class="chart" id="ddc-chart" onclick="dropdown('ddc')"></div>
                     <div class="buysell">
-                        <span class="input-number-decrement" id="input-number-decrement-id" onclick="decreaseValue(6)">-</span>
+                        <span class="input-number-decrement" id="ddc-input-number-decrement-id">-</span>
                         <input class="input-number" id="ddc-input-number-id" type="text" value="1" min="0" max="10">
-                        <span class="input-number-increment" id="input-number-increment-id" onclick="increaseValue(6)">+</span>
-                        <button class="stock-button-drop" onclick="buyStock(6, 1)">Buy</button>
-                        <button class="stock-button-drop" onclick="sellStock(6, 1)">Sell</button>
+                        <span class="input-number-increment" id="ddc-input-number-increment-id">+</span>
+                        <button class="stock-button-drop" id="ddc-stock-button-buy">Buy</button>
+                        <button class="stock-button-drop" id="ddc-stock-button-sell">Sell</button>
                     </div>
                 </td>
             </tr>
@@ -197,18 +204,18 @@
                 <td id="sss-change" onclick="dropdown('sss')"></td>
                 <td id="sss-shares" onclick="dropdown('sss')">0</td>
                 <td id="sss-holdings" onclick="dropdown('sss')"></td>
-                <td><button class="stock-button" onclick="buyStock(7, 0)">Buy All</button></td>
-                <td><button class="stock-button" onclick="sellStock(7, 0)">Sell All</button></td>
+                <td><button class="stock-button" id="sss-stock-button-all-buy">Buy All</button></td>
+                <td><button class="stock-button" id="sss-stock-button-all-sell">Sell All</button></td>
             </tr>
             <tr class="stock-details" id="sss-stock-details">
                 <td colspan="9" id="sss-graf">
                     <div class="chart" id="sss-chart" onclick="dropdown('sss')"></div>
                     <div class="buysell">
-                        <span class="input-number-decrement" id="input-number-decrement-id" onclick="decreaseValue(7)">-</span>
+                        <span class="input-number-decrement" id="sss-input-number-decrement-id">-</span>
                         <input class="input-number" id="sss-input-number-id" type="text" value="1" min="0" max="10">
-                        <span class="input-number-increment" id="input-number-increment-id" onclick="increaseValue(7)">+</span>
-                        <button class="stock-button-drop" onclick="buyStock(7, 1)">Buy</button>
-                        <button class="stock-button-drop" onclick="sellStock(7, 1)">Sell</button>
+                        <span class="input-number-increment" id="sss-input-number-increment-id">+</span>
+                        <button class="stock-button-drop" id="sss-stock-button-buy">Buy</button>
+                        <button class="stock-button-drop" id="sss-stock-button-sell">Sell</button>
                     </div>
                 </td>
             </tr>
@@ -220,24 +227,26 @@
                 <td id="ooi-change" onclick="dropdown('ooi')"></td>
                 <td id="ooi-shares" onclick="dropdown('ooi')">0</td>
                 <td id="ooi-holdings" onclick="dropdown('ooi')"></td>
-                <td><button class="stock-button" onclick="buyStock(8, 0)">Buy All</button></td>
-                <td><button class="stock-button" onclick="sellStock(8, 0)">Sell All</button></td>
+                <td><button class="stock-button" id="ooi-stock-button-all-buy">Buy All</button></td>
+                <td><button class="stock-button" id="ooi-stock-button-all-sell">Sell All</button></td>
             </tr>
             <tr class="stock-details" id="ooi-stock-details">
                 <td colspan="9" id="ooi-graf">
                     <div class="chart" id="ooi-chart" onclick="dropdown('ooi')"></div>
                     <div class="buysell">
-                        <span class="input-number-decrement" id="input-number-decrement-id" onclick="decreaseValue(8)">-</span>
+                        <span class="input-number-decrement" id="ooi-input-number-decrement-id">-</span>
                         <input class="input-number" id="ooi-input-number-id" type="text" value="1" min="0" max="10">
-                        <span class="input-number-increment" id="input-number-increment-id" onclick="increaseValue(8)">+</span>
-                        <button class="stock-button-drop" onclick="buyStock(8, 1)">Buy</button>
-                        <button class="stock-button-drop" onclick="sellStock(8, 1)">Sell</button>
+                        <span class="input-number-increment" id="ooi-input-number-increment-id">+</span>
+                        <button class="stock-button-drop" id="ooi-stock-button-buy">Buy</button>
+                        <button class="stock-button-drop" id="ooi-stock-button-sell">Sell</button>
                     </div>
                 </td>
             </tr>
         </tbody>
     </table>
-    <script src="../js/stockmarket.js"></script>
-    <script src="../js/stockmarketlistdropdown.js"></script>
+    <script type="module" src="../js/stockmarket.js"></script>
+    <script type="text/javascript" src="../js/stockmarketlistdropdown.js"></script>
+    <script type="module" src="../js/storage.js"></script>
+    <script type="module" src="../data/playerdata.js"></script>
   </body>
 </html>
