--- a/game/html/map_mine.html
+++ b/game/html/map_mine.html
@@ -10,10 +10,9 @@
 <body>
     <div id="container">
         <img id="map" draggable="false" src="../img/map/map.png">
-        <div class="marker-button" id="marker-1"><button class="marker-button-b">Mine 1</button></div>
-        <div class="marker-button" id="marker-2"><button class="marker-button-b">Mine 2</button></div>
-        <div class="marker-button" id="marker-3"><button class="marker-button-b">Mine 3</button></div>
-        <div class="marker-button" id="marker-4"><button class="marker-button-b">Mine 4</button></div>
+        <div class="marker-button" id="marker-1"><button class="marker-button-b" onclick="window.location.href = '../html/mine.html'">Mine 1</button></div>
+        <div class="marker-button" id="marker-2"><button class="marker-button-b" onclick="window.location.href = '../html/stockmarket.html'">Stock Market</button></div>
+        <div class="marker-button" id="marker-3"><button class="marker-button-b" onclick="window.location.href = '../html/warehouse.html'">Warehouse</button></div>
     </div>
 </body>
 <script type="text/javascript" src="../js/map.js"></script>
