Added Hover Element to Warehouse

--- a/game/html/warehouse.html
+++ b/game/html/warehouse.html
@@ -12,7 +12,7 @@
         <div id="info-div">
             <div id="map-select">
                 <div id="map-button">
-                    <a href="map_mine.html" draggable="false"><span>&lt;</span></a>
+                    <a href="map_mine.html" draggable="false"><span>&larr; Back</span></a>
                 </div>
             </div>
             
@@ -20,6 +20,7 @@
 
         </div>
     </div>
+	<div id="hover-box"></div>
 	<div class="grid-container">
 		<div class="grid-item">
 			<div class="grid-title">
@@ -37,7 +38,7 @@
 						<tbody>
 						<tr>
 							<td>
-								<img src="../img/novaria/ores/Cryonite.png" alt="Cryonite">
+								<img src="../img/novaria/ores/Cryonite.png" alt="Cryonite" draggable="false" data-hover-text="novaria,cryonite">
 							</td>
 							<td>
 								<span>Cryonite</span>
@@ -46,7 +47,7 @@
 						</tr>
 						<tr>
 							<td>
-								<img src="../img/novaria/ores/Glacialite.png" alt="Glacialite">
+								<img src="../img/novaria/ores/Glacialite.png" alt="Glacialite" draggable="false" data-hover-text="novaria,glacialite">
 							</td>
 							<td>
 								<span>Glacialite</span>
@@ -55,7 +56,7 @@
 						</tr>
 						<tr>
 							<td>
-								<img src="../img/novaria/ores/Crystaline Ice.png" alt="Crystaline Ice">
+								<img src="../img/novaria/ores/Crystaline Ice.png" alt="Crystaline Ice" draggable="false" data-hover-text="novaria,crystalineIce">
 							</td>
 							<td>
 								<span>Crystaline Ice</span>
@@ -63,7 +64,7 @@
 							<td class="ore-amount" id="crystaline-ice-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/novaria/ores/Frost Iron.png" alt="Frost Iron">
+								<img src="../img/novaria/ores/Frost Iron.png" alt="Frost Iron" draggable="false" data-hover-text="novaria,frostIron">
 							</td>
 							<td>
 								<span>Frost Iron</span>
@@ -71,7 +72,7 @@
 							<td class="ore-amount" id="frost-iron-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/novaria/ores/Frostbite.png" alt="Frostbite">
+								<img src="../img/novaria/ores/Frostbite.png" alt="Frostbite" draggable="false" data-hover-text="novaria,frostbite">
 							</td>
 							<td>
 								<span>Frostbite</span>
@@ -79,7 +80,7 @@
 							<td class="ore-amount" id="frostbite-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/novaria/ores/Blizzardstone.png" alt="Blizzardstone">
+								<img src="../img/novaria/ores/Blizzardstone.png" alt="Blizzardstone" draggable="false" data-hover-text="novaria,blizzardstone">
 							</td>
 							<td>
 								<span>Blizzardstone</span>
@@ -87,7 +88,7 @@
 							<td class="ore-amount" id="blizzardstone-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/novaria/ores/Snow Quartz.png" alt="Snow Quartz">
+								<img src="../img/novaria/ores/Snow Quartz.png" alt="Snow Quartz" draggable="false" data-hover-text="novaria,snowQuartz">
 							</td>
 							<td>
 								<span>Snow Quartz</span>
@@ -95,7 +96,7 @@
 							<td class="ore-amount" id="snow-quartz-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Auroraite">
+								<img src="../img/template.png" alt="Auroraite" draggable="false" data-hover-text="novaria,auroraite">
 							</td>
 							<td>
 								<span>Auroraite</span>
@@ -103,7 +104,7 @@
 							<td class="ore-amount" id="auroraite-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Ice Diamond">
+								<img src="../img/template.png" alt="Ice Diamond" draggable="false" data-hover-text="novaria,iceDiamond">
 							</td>
 							<td>
 								<span>Ice Diamond</span>
@@ -111,7 +112,7 @@
 							<td class="ore-amount" id="ice-diamond-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Crystaline Ice">
+								<img src="../img/template.png" alt="Crystaline Ice" draggable="false" data-hover-text="novaria,crystalineIce">
 							</td>
 							<td>
 								<span>Crystaline Ice</span>
@@ -138,7 +139,7 @@
 						<tbody>
 						<tr>
 							<td>
-								<img src="../img/template.png" alt="Voidstone">
+								<img src="../img/template.png" alt="Voidstone" draggable="false">
 							</td>
 							<td>
 								<span>Voidstone</span>
@@ -147,7 +148,7 @@
 						</tr>
 						<tr>
 							<td>
-								<img src="../img/template.png" alt="Solarium">
+								<img src="../img/template.png" alt="Solarium" draggable="false">
 							</td>
 							<td>
 								<span>Solarium</span>
@@ -156,7 +157,7 @@
 						</tr>
 						<tr>
 							<td>
-								<img src="../img/template.png" alt="Nebulite">
+								<img src="../img/template.png" alt="Nebulite" draggable="false">
 							</td>
 							<td>
 								<span>Nebulite</span>
@@ -164,7 +165,7 @@
 							<td class="ore-amount" id="nebulite-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Lunarite">
+								<img src="../img/template.png" alt="Lunarite" draggable="false">
 							</td>
 							<td>
 								<span>Lunarite</span>
@@ -172,7 +173,7 @@
 							<td class="ore-amount" id="lunarite-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Celestium">
+								<img src="../img/template.png" alt="Celestium" draggable="false">
 							</td>
 							<td>
 								<span>Celestium</span>
@@ -180,7 +181,7 @@
 							<td class="ore-amount" id="celestium-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Star Metal">
+								<img src="../img/template.png" alt="Star Metal" draggable="false">
 							</td>
 							<td>
 								<span>Star Metal</span>
@@ -188,7 +189,7 @@
 							<td class="ore-amount" id="star-metal-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Cometstone">
+								<img src="../img/template.png" alt="Cometstone" draggable="false">
 							</td>
 							<td>
 								<span>Cometstone</span>
@@ -196,7 +197,7 @@
 							<td class="ore-amount" id="cometstone-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Astralite">
+								<img src="../img/template.png" alt="Astralite" draggable="false">
 							</td>
 							<td>
 								<span>Astralite</span>
@@ -204,7 +205,7 @@
 							<td class="ore-amount" id="astralite-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Aeromite">
+								<img src="../img/template.png" alt="Aeromite" draggable="false">
 							</td>
 							<td>
 								<span>Aeromite</span>
@@ -212,7 +213,7 @@
 							<td class="ore-amount" id="aeromite-ore-amount">0</td>
 						</tr>
 							<td>
-								<img src="../img/template.png" alt="Aetherium">
+								<img src="../img/template.png" alt="Aetherium" draggable="false">
 							</td>
 							<td>
 								<span>Aetherium</span>
