--- a/game/html/mine.html
+++ b/game/html/mine.html
@@ -11,7 +11,7 @@
         <div id="info-div">
             <div id="map-select">
                 <div id="map-button">
-                    <a href="map_mine.html" draggable="false"><span>&lt;</span></a>
+                    <a href="map_mine.html" draggable="false"><span>&larr; Back</span></a>
                 </div>
             </div>
             
