--- a/game/index.html
+++ b/game/index.html
@@ -20,5 +20,6 @@
 		<button class="button" onclick="window.location.href='html/map_space.html'">Map Space</button>
 		<button class="button" onclick="window.location.href='html/map_mine.html'">Map Mine</button>
 	</div>
+	<p>Version: 0.0.10</p>
 </body>
 </html>
