Shop Starting to take shape

--- a/game/html/map_mine.html
+++ b/game/html/map_mine.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Ore Information</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../css/body.css">
 	<link rel="stylesheet" type="text/css" href="../css/infobar.css">
 	<link rel="stylesheet" type="text/css" href="../css/map.css">
@@ -13,6 +12,7 @@
         <div class="marker-button" id="marker-1"><button class="marker-button-b" onclick="window.location.href = '../html/mine.html'">Mine 1</button></div>
         <div class="marker-button" id="marker-2"><button class="marker-button-b" onclick="window.location.href = '../html/stockmarket.html'">Stock Market</button></div>
         <div class="marker-button" id="marker-3"><button class="marker-button-b" onclick="window.location.href = '../html/warehouse.html'">Warehouse</button></div>
+        <div class="marker-button" id="marker-4"><button class="marker-button-b" onclick="window.location.href = '../html/shop.html'">Shop</button></div>
     </div>
 </body>
 <script type="text/javascript" src="../js/map.js"></script>
